objects/ScCollection_Bulk_Scheduled_SMS__c.object
<CustomObject>
    <description>This Object is used to store information for scheduled SMS.</description>
    <fields>
        <fullName>ScCollection_Action_Code_Id__c</fullName>
        <label>Action Code Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract_Id_s__c</fullName>
        <label>Contract Id&apos;s</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_IsSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Job_Id__c</fullName>
        <description>This field is used to store the scheduled job Id</description>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Review_Date__c</fullName>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScCollection_SMS_Text__c</fullName>
        <label>SMS Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Scheduler_Name__c</fullName>
        <label>Scheduler Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Source_System_Name__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bulk Scheduled SMS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScCollection_Scheduler_Name__c</columns>
        <columns>ScCollection_Review_Date__c</columns>
        <columns>ScCollection_SMS_Text__c</columns>
        <columns>ScCollection_Source_System_Name__c</columns>
        <columns>ScCollection_IsSuccess__c</columns>
        <columns>ScCollection_Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BSMS-{0000000}</displayFormat>
        <label>Bulk Scheduled SMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Scheduled SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>